// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberStepper renders correctly 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "gap": 12,
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
          "width": 44,
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    x 
    4
  </PeachText>
  <TouchableOpacity
    accessibilityHint="increase number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;

exports[`NumberStepper renders correctly when maximum is reached 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "gap": 12,
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
          "width": 44,
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    x 
    4
  </PeachText>
  <TouchableOpacity
    accessibilityHint="increase number"
    disabled={true}
    onPress={[Function]}
    style={
      {
        "opacity": 0.5,
      }
    }
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;

exports[`NumberStepper renders correctly when minimum is reached 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "gap": 12,
      },
      undefined,
    ]
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    disabled={true}
    onPress={[Function]}
    style={
      {
        "opacity": 0.5,
      }
    }
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
          "width": 44,
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    x 
    4
  </PeachText>
  <TouchableOpacity
    accessibilityHint="increase number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;

exports[`NumberStepper renders correctly with style 1`] = `
<View
  style={
    [
      {
        "flexDirection": "row",
        "gap": 12,
      },
      {
        "marginTop": 16,
      },
    ]
  }
>
  <TouchableOpacity
    accessibilityHint="decrease number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="minusCircle"
      size={24}
    />
  </TouchableOpacity>
  <PeachText
    style={
      [
        {
          "fontFamily": "Baloo2-Bold",
          "fontSize": 24,
          "letterSpacing": 0.24,
          "lineHeight": 32,
          "textAlign": "center",
          "width": 44,
        },
        {
          "color": "#2B1911",
        },
      ]
    }
  >
    x 
    4
  </PeachText>
  <TouchableOpacity
    accessibilityHint="increase number"
    disabled={false}
    onPress={[Function]}
    style={false}
  >
    <Icon
      color="#F56522"
      id="plusCircle"
      size={24}
    />
  </TouchableOpacity>
</View>
`;
